fixed button contrast

--- a/style.css
+++ b/style.css
@@ -102,11 +102,6 @@ img {
   margin-top: 25px;
   transform: translate(-45%, 90%);
 }
-/* socialIcons {
-  font-size: 200px;
-  /* display: flex;
-  justify-content:center; */
-} */
 socialIcons a {
   text-decoration: none;
   padding: 0px;
